--- a/Safe manipulation/Digital Dial Magnifier/data/index.html
+++ b/Safe manipulation/Digital Dial Magnifier/data/index.html
@@ -7,23 +7,11 @@
 	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-	<a href="/help" target="_blank" class="button">Instructions</a>    
-	<a href="/settings" target="_blank" class="button">Settings</a><br><br>
+	<a href="/help" class="button">Instructions</a>    
+	<a href="/settings" class="button">Settings</a>
+	<a href="/graph" class="button">Graph</a>  <br><br>
 	<h1>Current number<br><label id="position">0</label></h1><br><br>
-	RCP Graph<br>
-	<canvas id="graph1" style="width:device-width;max-width:800px"></canvas><br>
-	<button id="cleargraph1">Clear graph</button><br><br>
-	<button id="savegraph1">Save graph</button><br><br><br>
-	LCP Graph<br>
-	<canvas id="graph2" style="width:device-width;max-width:800px"></canvas><br>
-	<button id="cleargraph2">Clear graph</button><br><br>
-	<button id="savegraph2">Save graph</button><br><br><br>
-	<label for="testing">Number: </label><input type="text" id="testing" name="contactpoint" size="5"><br>
-	<label for="rcontactpoint">Right contact point: </label><input type="text" id="rcontactpoint" name="contactpoint" size="5"><br>
-	<label for="lcontactpoint">Left contact point: </label><input type="text" id="lcontactpoint" name="contactpoint" size="5"><br><br>
-	<button id="plot">Plot</button><br><br>
 
-	<script src="/chart.js"></script>
 	<script src="/index.js"></script>
 </body>
 </html>
