--- a/Safe manipulation/Digital Dial Magnifier/data/settings.html
+++ b/Safe manipulation/Digital Dial Magnifier/data/settings.html
@@ -46,7 +46,7 @@
         <option value="true">True</option>
         <option value="false">False</option>
     </select><br>
-    <label for="pointer_size">Dial Pointer Size (decimal < 1): </label>
+    <label for="pointer_size">Dial Pointer Size: </label>
     <input type="text" id="pointer_size" name="pointer_size" size="5" placeholder=""><br>
     <label for="update_interval">Update Interval (milliseconds): </label>
     <input type="text" id="update_interval" name="update_interval" size="5" placeholder=""><br>
@@ -59,7 +59,7 @@
     <label for="web_username">Webpage Username: </label>
     <input type="text" id="web_username" name="web_username" size="5" placeholder=""><br>
     <label for="web_password">Webpage Password: </label>
-    <input type="text" id="web_password" name="web_password" size="5" placeholder=""><br>
+    <input type="text" id="web_password" name="web_password" size="5" placeholder=""><br><br><br>
 
     <button id="save">Save Settings</button>
 
