Extra button for graphing

--- a/Safe manipulation/Digital Dial Magnifier/data/graph.html
+++ b/Safe manipulation/Digital Dial Magnifier/data/graph.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <canvas id="graph1" style="width:device-width; max-width:800px; height:200px;"></canvas><br>
-  <canvas id="graph2" style="width:device-width; max-width:800px; height:200px;"></canvas><br><br>
-  <label for="testing">Number</label><br>
-  <button id="downnumber">-2</button><input type="text" id="testing" name="contactpoint" size="5" value="0"><button id="upnumber">+2</button><br><br>
+  <canvas id="graph2" style="width:device-width; max-width:800px; height:200px;"></canvas><br>
+  <label for="testing">Number being tested</label><br>
+  <button id="down2number">-2</button><button id="down1number">-1</button><input type="text" id="testing" name="contactpoint" size="5" value="0"><button id="up1number">+1</button><button id="up2number">+2</button><br><br>
   Advance on RCP<label class="switch"><input type="checkbox" id="advanceon" checked><span class="slider round"></span></label>Advance up<label class="switch"><input type="checkbox" id="advanceby" checked><span class="slider round"></span></label><br><br>
   <button id="plotrcp" class="button">Plot RCP</button>    <button id="plotlcp" class="button">Plot LCP</button><br><br><br>
   <button id="savegraph1" class="button">Save RCP graph</button>    <button id="savegraph2" class="button">Save LCP graph</button><br><br>
