--- a/Safe manipulation/Digital Dial Magnifier/data/help.html
+++ b/Safe manipulation/Digital Dial Magnifier/data/help.html
@@ -11,7 +11,17 @@
 	<p>
 		1. Slide the base onto the front of the safe<br>
 		2. Slide the encoder onto the metal rod and make sure it's centered on the dial before tightening the screw onto the rod.<br>
-		3. If there's not enough friction to spin the encoder then you may need to simply tape it onto the dial. It doesn't take much to get it spinning well with the dial.
+		3. If there's not enough friction to spin the encoder then you may need to simply tape it onto the dial. It doesn't take much to get it spinning well with the dial.<br>
+	</p>
+	<h1>Graphing interface</h1>
+	<p>
+		The graphing page shows 2 graphs, one for each contact point.<br>
+
+		The number being tested will automatically advance by +2 or -2 depending on if the "Advance up" box is ticked. And it will advance on either graphing the right or left contact point depening on if the "Advance on RCP" box is ticked. This way you are free to graph only one or both contact points.<br>
+
+		The plot buttons grab the value from the device so all you have to do is tap "Plot RCP/LCP" when you take a reading. You can take overwrite a bad reading by just setting the number being tested to the same and it will overwrite the previous reading.<br>
+
+		Saving the graphs will start a download for RCP.png or LCP.png.
 	</p>
 </body>
 </html>
