Reset to 0 button

--- a/Safe manipulation/Digital Dial Magnifier/data/index.html
+++ b/Safe manipulation/Digital Dial Magnifier/data/index.html
@@ -11,6 +11,7 @@
 	<a href="/settings" class="button">Settings</a>
 	<a href="/graph" class="button">Graph</a>  <br><br>
 	<h1>Current number<br><label id="position">0</label></h1><br><br>
+	<button id="reset" class="button">Reset to 0</a>
 
 	<script src="/index.js"></script>
 </body>
