--- a/Safe manipulation/Digital Dial Magnifier/data/graph.html
+++ b/Safe manipulation/Digital Dial Magnifier/data/graph.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Encoder Home Page</title>
+  <title>Encoder Graphing Page</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
   Advance on RCP<label class="switch"><input type="checkbox" id="advanceon" checked><span class="slider round"></span></label>Advance up<label class="switch"><input type="checkbox" id="advanceby" checked><span class="slider round"></span></label><br><br>
   <button id="plotrcp" class="button">Plot RCP</button>    <button id="plotlcp" class="button">Plot LCP</button><br><br><br>
   <button id="savegraph1" class="button">Save RCP graph</button>    <button id="savegraph2" class="button">Save LCP graph</button><br><br>
-  <button id="cleargraphs" class="button">Clear graphs</button><br><br>
+  <button id="cleargraphs" class="button">Clear graphs</button><br><br><br>
 
   <script src="/chart.js"></script>
   <script src="/graph.js"></script>
