--- a/Safe manipulation/Digital Dial Magnifier/data/settings.html
+++ b/Safe manipulation/Digital Dial Magnifier/data/settings.html
@@ -49,18 +49,7 @@
     <label for="pointer_size">Dial Pointer Size: </label>
     <input type="text" id="pointer_size" name="pointer_size" size="5" placeholder=""><br>
     <label for="update_interval">Update Interval (milliseconds): </label>
-    <input type="text" id="update_interval" name="update_interval" size="5" placeholder=""><br>
-
-    <h1>WiFi/Web Server Settings</h1>
-    <label for="ssid">WiFi Name: </label>
-    <input type="text" id="ssid" name="ssid" size="5" placeholder=""><br>
-    <label for="wifi_pass">WiFi Password: </label>
-    <input type="text" id="wifi_pass" name="wifi_pass" size="5" placeholder=""><br>
-    <label for="web_username">Webpage Username: </label>
-    <input type="text" id="web_username" name="web_username" size="5" placeholder=""><br>
-    <label for="web_password">Webpage Password: </label>
-    <input type="text" id="web_password" name="web_password" size="5" placeholder=""><br><br><br>
-
+    <input type="text" id="update_interval" name="update_interval" size="5" placeholder=""><br><br><br>
     <button id="save">Save Settings</button>
 
     <script src="/settings.js"></script>
